[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/fonts/BADABB__.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/fonts/KGHAPPY.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/background/background0.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/soungs/Swinging Pants.ogg" type="AudioStream" id=6]
[ext_resource path="res://TitleMenu.gd" type="Script" id=7]
[ext_resource path="res://Assets/soungs/UI_Click.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/soungs/UI_Hover.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
outline_color = Color( 0.14902, 0.14902, 0.14902, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.32549, 0.32549, 0.32549, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.560784 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0, 0, 0, 0.290196 )
shadow_offset = Vector2( 0, 3.41 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0, 0, 0, 0.290196 )
shadow_offset = Vector2( 0, 3.41 )

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 522.5, 305 )
scale = Vector2( 0.545313, 0.635417 )
texture = ExtResource( 5 )

[node name="text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -294.5
margin_right = 375.0
margin_bottom = -135.5
custom_fonts/font = SubResource( 1 )
text = "The Rescuer"

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 743.0
margin_top = 170.0
margin_right = 1005.0
margin_bottom = 578.0
custom_styles/panel = SubResource( 2 )

[node name="playbutton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -45.5
margin_right = 147.5
margin_bottom = 35.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "Start Game "

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = 75.5
margin_right = 147.5
margin_bottom = 156.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -36.298

[node name="UI_Cilck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -11.444

[node name="UI_Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="mouse_entered" from="playbutton" to="." method="_on_playbutton_mouse_entered"]
[connection signal="pressed" from="playbutton" to="." method="_on_playbutton_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
